fix: hidden-scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -226,11 +226,13 @@ svg {
   transition: height 0.4s 0.4s, transition 0.4s;
 }
 
+.hidden-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
 .hidden-scrollbar::-webkit-scrollbar {
-  /* 隐藏默认的滚动条 */
-  -webkit-appearance: none;
   display: none;
-  width: 0px;
 }
 
 /* 自定义滚动条 */
